--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.9.3",
+    "@mantine/hooks": "^5.9.3",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "mongo": "^0.1.0",
+    "mongoose": "^6.8.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "telegraf": "^4.11.2",
     "typescript": "4.9.4"
   }
 }
